updating admin-page.html

--- a/DNAOrderApp/order/templates/order/admin-page.html
+++ b/DNAOrderApp/order/templates/order/admin-page.html
@@ -186,6 +186,9 @@ function deletePhenotype(elt) {
 </script>
 
 {% endblock extra_css_js %}
+h3 {
+	color: red;
+}
 
 {% block extrahead %}
 {% endblock extrahead %}
