--- a/DNAOrderApp/order/templates/order/fmprojectlist.html
+++ b/DNAOrderApp/order/templates/order/fmprojectlist.html
@@ -49,7 +49,26 @@ $(document).ready(function() {
 	});
 	alert("done loading phenotype form");
 
+	// Changing Modal size dynamically
+	$('#phenotypelist').on('show', function(){
+		console.log("width" + window.innerWidth + "height " + window.innerHeight +"margin-left" + -(window.innerWidth/2));
+		$('#phenotypelist').css({ 
+									width : window.innerWidth+'px', 
+									height : window.innerHeight+'px', 
+									'margin-left': -(window.innerWidth/2), 
+									'max-height': window.innerHeight+'px', 
+									'max-width': window.innerWidth+'px',
+									padding : '50px',
+									margin : ''
+
+					});
+		// $('.modal', this).css({ width:window.innerWidth+'px', height:window.innerHeight+'px', 'margin-left':'-(window.innerWidth/2)'});
+	});
+
 });
+
+
+
 
 function deletePhenotype(elt) {
 	var value = $(elt).attr("value");
@@ -196,7 +215,7 @@ border:solid 1px #c3c3c3;
 								</tr>
 								<tr>
 									<td>{{ ss.sample_submission_name }}</td>
-									<td><a href="#phenotypelist" data-toggle="modal" value="{{ss.sample_submission_name|replace}}" onclick="getPhenotypeList(this)">PhenotypeList</a></td>
+									<td><a href="#phenotypelist" data-toggle="modal" value="{{ss.sample_submission_name}}" onclick="getPhenotypeList(this)">PhenotypeList</a></td>
 									<td>{{ ss.source }}</td>
 									<td>{{ ss.sample_num }}</td>
 									<td>{{ ss.date_created }}</td>
@@ -299,7 +318,7 @@ border:solid 1px #c3c3c3;
 </div>
 
 <!--******************** PHENOTYPE MODAL **************************-->
-<div id="phenotypelist" class="modal hide fade" tabindex="-1" role="dialog">
+<div id="phenotypelist" class="modal hide fade" tabindex="-1" role="dialog" style="width:window.innerWidth+'px'">
 	<div class="modal-header">
 		<button type="button" class="close" data-dismiss="modal">x</button>
 		<h3 id="modallabel">Phenotype list for Sample Submission "SAMPLE SUBMISSION NAME"</h3>
