The footer of the modal doesn't fall off the screen anymore. fixed.

--- a/DNAOrderApp/order/templates/order/fmprojectlist.html
+++ b/DNAOrderApp/order/templates/order/fmprojectlist.html
@@ -357,7 +357,7 @@ border:solid 1px #c3c3c3;
 			<h4>Sample Submission: {{ samplesubmission_pheno }}</h4>
 		</div>
 		
-		<div class="modal-body" style="max-height: 300px;">
+		<div class="modal-body" style="max-height: 300px; height: 300px;">
 			<!--*************** PHENOTYPE LIST ****************************-->
 			<h3>Current Phenotype List</h3>
 			<ul id="current-list" class="nav nav-pills nav-stacked">
@@ -370,7 +370,7 @@ border:solid 1px #c3c3c3;
 			</form>
 		</div>
 
-		<div class="modal-footer">
+		<div class="modal-footer container-fluid" style="max-height:30px; padding:30px; border: solid;">
 			<a href="#" class="btn pull-right">Cancel</a>
 			<a href="#" class="btn btn-primary pull-right">Save changes</a>
 		</div>
