although dynamically changing window size will cause awkward modal sizes, setting the window and reloading the page will get it to proper position and size of the modal

--- a/DNAOrderApp/order/templates/order/fmprojectlist.html
+++ b/DNAOrderApp/order/templates/order/fmprojectlist.html
@@ -74,7 +74,7 @@ $(document).ready(function() {
 										height : '100%', 
 										'margin-left' : -(window.innerWidth/2)+60,
 										// 'margin-left' : '-600px',
-										'margin-top' : -80+'px',
+										'margin-top' : -window.innerHeight*0.08+'px',
 										'max-width' : window.innerWidth-120+'px',
 										// 'max-width' : '1500px',
 										'max-height' : window.innerHeight-60+'px',
